--- a/data/style.css
+++ b/data/style.css
@@ -1,37 +1,50 @@
 button.tile {
 	margin: 2px;
 	transform: scale(1.0);
-   }
-   
-   button.empty-tile {
+}
+
+button.empty-tile {
 	opacity : 0;
-   }
-   
-   button.filled-tile {
-	opacity : 100;
-	border-radius : 50%;
-   }
-   
-   button.dark {
-	background-color : #202020;
-   }
-   
-   button.light {
-	background-color :  #e7e7f0;
-   }
-   
-   box.active {
+	border-radius: 50%;
+	transition: opacity ease-in-out 0.2s, box-shadow 0.2s;
+}
+
+button.empty-tile:hover {
+	opacity : 0.5;
 	box-shadow: 0px 0px 3px 1px @accent_color;
-   }
-   
-   frame {
+	border-radius: 50%;
+}
+
+button.filled-tile {
+	opacity : 1;
+	border-radius : 50%;
+	transform: scale(1.0);
+	transition: transform ease-in-out 0.15s;
+}
+  
+button.filled-tile:active {
+	transform : scale(1.05);
+}
+
+button.dark {
+	background-color : #202020;
+}
+
+button.light {
+	background-color :  #e7e7f0;
+}
+
+box.active {
+	box-shadow: 0px 0px 3px 1px @accent_color;
+}
+
+frame {
 	border-radius : 1%;
 	border-width : 0px;
-   }
-   
-   grid > frame {
+}
+
+grid > frame {
 	border-radius : 1%;
 	border-width : 1px;
 	border-color : @BLACK_700;
-   }
-   
+}
